--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   },
   "private": true,
   "dependencies": {
+    "2gis-maps": "^3.5.6",
     "@angular/animations": "^4.0.0",
     "@angular/common": "^4.0.0",
     "@angular/compiler": "^4.0.0",
@@ -21,7 +22,10 @@
     "@angular/platform-browser": "^4.0.0",
     "@angular/platform-browser-dynamic": "^4.0.0",
     "@angular/router": "^4.0.0",
+    "body-parser": "^1.19.0",
     "core-js": "^2.4.1",
+    "express": "^4.17.1",
+    "mongojs": "^2.6.0",
     "rxjs": "^5.4.1",
     "zone.js": "^0.8.14"
   },
